app/scss/components/_one-column-block.scss
@use '../base/globals' as *;

.one-column-block {
  @include container;
  overflow: hidden;

  &.column-width--small {
    max-width: 640px;
  }

  &.column-width--medium {
    max-width: 1024px;
  }

  &__heading {
    margin-bottom: 32px;
    text-align: center;

    &.font-size--large {
      font-size: clamp(2.4rem, 6vw, 6rem);
      line-height: 1;
    }
  } 

  &__description {
    font-size: 1rem;
    line-height: 1.4;

    &.font-size--larger {
      font-size: 1.2rem;
    }

    &.description-width--small {
      max-width: 480px;
      margin: auto;

      @include respond-up(large){
        max-width: 560px;
      }
    }

    &.description-width--medium {
      max-width: 800px;
      margin: auto;
    }

    h1, h2, h3, h4, h5 {
      margin: 24px 0 8px;
    }

    li {
      margin: 0 0 8px 16px;
      list-style-type: disc;
    }
  }

  &__button {
    &.button-alignment--center {
      width: fit-content;
      margin: 40px auto 0;
    }

    &.button-alignment--right {
      width: fit-content;
      margin-top: 40px;
      margin-left: auto;
    }
  }
}

